tests/dataset/tpc-ds/compiler/ex/q16.ex
# Generated by Mochi compiler v0.10.26 on 2025-07-16T17:34:27Z
defmodule Main do
  @catalog_returns []
  @spec distinct(list(any())) :: list(any())
  def distinct(xs) do
    try do
      out = []
      _ = out

      {out} =
        Enum.reduce(_iter(xs), {out}, fn x, {out} ->
          if !contains.(out, x) do
            out = out ++ [x]
          end

          {out}
        end)

      _ = out
      throw({:return, out})
    catch
      {:return, v} -> v
    end
  end

  def main do
    # catalog_sales :: list(map())
    catalog_sales = [
      %{
        cs_order_number: 1,
        cs_ship_date_sk: 1,
        cs_ship_addr_sk: 1,
        cs_call_center_sk: 1,
        cs_warehouse_sk: 1,
        cs_ext_ship_cost: 5,
        cs_net_profit: 20
      },
      %{
        cs_order_number: 1,
        cs_ship_date_sk: 1,
        cs_ship_addr_sk: 1,
        cs_call_center_sk: 1,
        cs_warehouse_sk: 2,
        cs_ext_ship_cost: 0,
        cs_net_profit: 0
      }
    ]

    # date_dim :: list(map())
    date_dim = [%{d_date_sk: 1, d_date: "2000-03-01"}]
    # customer_address :: list(map())
    customer_address = [%{ca_address_sk: 1, ca_state: "CA"}]
    # call_center :: list(map())
    call_center = [%{cc_call_center_sk: 1, cc_county: "CountyA"}]
    # filtered :: list(map())
    filtered =
      (fn ->
         src = catalog_sales

         rows =
           _query(
             src,
             [
               %{
                 items: date_dim,
                 on: fn cs1, d ->
                   cs1.cs_ship_date_sk == d.d_date_sk && d.d_date >= "2000-03-01" &&
                     d.d_date <= "2000-04-30"
                 end
               },
               %{
                 items: customer_address,
                 on: fn cs1, d, ca ->
                   cs1.cs_ship_addr_sk == ca.ca_address_sk && ca.ca_state == "CA"
                 end
               },
               %{
                 items: call_center,
                 on: fn cs1, d, ca, cc ->
                   cs1.cs_call_center_sk == cc.cc_call_center_sk && cc.cc_county == "CountyA"
                 end
               }
             ],
             %{
               select: fn cs1, d, ca, cc ->
                 Map.merge(Map.merge(Map.merge(Map.merge(cs1, d), ca), cc), %{
                   cs1: cs1,
                   d: d,
                   ca: ca,
                   cc: cc
                 })
               end,
               where: fn [cs1, d, ca, cc] ->
                 _exists(
                   for cs2 <- catalog_sales,
                       cs1.cs_order_number == cs2.cs_order_number &&
                         cs1.cs_warehouse_sk != cs2.cs_warehouse_sk,
                       do: cs2
                 ) &&
                   _exists(
                     for cr <- @catalog_returns, cs1.cs_order_number == cr.cr_order_number, do: cr
                   ) == false
               end
             }
           )

         groups = _group_by(rows, fn %{cs1: cs1, d: d, ca: ca, cc: cc} -> %{} end)
         items = groups

         Enum.map(items, fn g ->
           %{
             order_count: _length(distinct(for x <- g.items, do: x.cs_order_number)),
             total_shipping_cost: _sum(for x <- g.items, do: x.cs_ext_ship_cost),
             total_net_profit: _sum(for x <- g.items, do: x.cs_net_profit)
           }
         end)
       end).()

    _json(filtered)
  end

  defp _exists(v) do
    cond do
      is_list(v) -> length(v) > 0
      is_map(v) and Map.has_key?(v, :items) -> length(Map.get(v, :items)) > 0
      is_map(v) -> map_size(v) > 0
      is_binary(v) -> String.length(v) > 0
      true -> raise "exists expects list, map or string"
    end
  end

  defmodule Group do
    defstruct key: nil, items: []

    def fetch(g, k) do
      case k do
        :key -> {:ok, g.key}
        :items -> {:ok, g.items}
        _ -> :error
      end
    end

    def get_and_update(g, k, f) do
      case k do
        :key ->
          {v, nv} = f.(g.key)
          {v, %{g | key: nv}}

        :items ->
          {v, nv} = f.(g.items)
          {v, %{g | items: nv}}

        _ ->
          {nil, g}
      end
    end
  end

  defp _group_by(src, keyfn) do
    {groups, order} =
      Enum.reduce(src, {%{}, []}, fn it, {groups, order} ->
        key =
          if is_list(it) do
            arity = :erlang.fun_info(keyfn, :arity) |> elem(1)
            if arity == 1, do: keyfn.(it), else: apply(keyfn, it)
          else
            keyfn.(it)
          end

        ks = :erlang.phash2(key)

        {groups, order} =
          if Map.has_key?(groups, ks) do
            {groups, order}
          else
            {Map.put(groups, ks, %Group{key: key}), order ++ [ks]}
          end

        val = if is_list(it) and length(it) == 1, do: hd(it), else: it
        groups = Map.update!(groups, ks, fn g -> %{g | items: g.items ++ [val]} end)
        {groups, order}
      end)

    Enum.map(order, fn k -> groups[k] end)
  end

  defp _iter(v) do
    if is_map(v) do
      Map.keys(v)
    else
      v
    end
  end

  defp _escape_json(<<>>), do: ""
  defp _escape_json(<<"\\", rest::binary>>), do: "\\\\" <> _escape_json(rest)
  defp _escape_json(<<"\"", rest::binary>>), do: "\\\"" <> _escape_json(rest)
  defp _escape_json(<<c::binary-size(1), rest::binary>>), do: c <> _escape_json(rest)
  defp _to_json(v) when is_binary(v), do: "\"" <> _escape_json(v) <> "\""
  defp _to_json(v) when is_number(v), do: to_string(v)
  defp _to_json(v) when is_boolean(v), do: if(v, do: "true", else: "false")
  defp _to_json(v) when is_list(v), do: "[" <> Enum.map_join(v, ",", &_to_json/1) <> "]"

  defp _to_json(v) when is_map(v) do
    keys = Map.keys(v) |> Enum.map(&to_string/1) |> Enum.sort()

    inner =
      Enum.map_join(keys, ",", fn k ->
        _to_json(k) <> ":" <> _to_json(Map.get(v, String.to_atom(k), Map.get(v, k)))
      end)

    "{" <> inner <> "}"
  end

  defp _to_json(_), do: "null"
  defp _json(v), do: IO.puts(_to_json(v))

  defp _length(v) do
    cond do
      is_binary(v) -> String.length(v)
      is_list(v) -> length(v)
      is_map(v) and Map.has_key?(v, :items) -> length(Map.get(v, :items))
      is_map(v) -> map_size(v)
      true -> raise "len expects list, map or string"
    end
  end

  defp _query(src, joins, opts \\ %{}) do
    where = Map.get(opts, :where)
    items = Enum.map(src, fn v -> [v] end)

    items =
      Enum.reduce(joins, items, fn j, items ->
        joined =
          cond do
            Map.get(j, :right) && Map.get(j, :left) ->
              matched = for _ <- j[:items], do: false

              {res, matched} =
                Enum.reduce(items, {[], matched}, fn left, {acc, matched} ->
                  {acc, matched, m} =
                    Enum.reduce(Enum.with_index(j[:items]), {acc, matched, false}, fn {right, ri},
                                                                                      {acc,
                                                                                       matched,
                                                                                       m} ->
                      keep =
                        if Map.has_key?(j, :on) and j[:on],
                          do: apply(j[:on], left ++ [right]),
                          else: true

                      if keep do
                        matched = List.replace_at(matched, ri, true)
                        {acc ++ [left ++ [right]], matched, true}
                      else
                        {acc, matched, m}
                      end
                    end)

                  acc = if !m, do: acc ++ [left ++ [nil]], else: acc
                  {acc, matched}
                end)

              Enum.reduce(Enum.with_index(j[:items]), res, fn {right, ri}, acc ->
                if Enum.at(matched, ri) do
                  acc
                else
                  undef = List.duplicate(nil, if(items == [], do: 0, else: length(hd(items))))
                  acc ++ [undef ++ [right]]
                end
              end)

            Map.get(j, :right) ->
              Enum.reduce(j[:items], [], fn right, acc ->
                {acc2, m} =
                  Enum.reduce(items, {acc, false}, fn left, {acc, m} ->
                    keep =
                      if Map.has_key?(j, :on) and j[:on],
                        do: apply(j[:on], left ++ [right]),
                        else: true

                    if keep, do: {acc ++ [left ++ [right]], true}, else: {acc, m}
                  end)

                if !m do
                  undef = List.duplicate(nil, if(items == [], do: 0, else: length(hd(items))))
                  acc2 ++ [undef ++ [right]]
                else
                  acc2
                end
              end)

            true ->
              Enum.reduce(items, [], fn left, acc ->
                {acc2, m} =
                  Enum.reduce(j[:items], {acc, false}, fn right, {acc, m} ->
                    keep =
                      if Map.has_key?(j, :on) and j[:on],
                        do: apply(j[:on], left ++ [right]),
                        else: true

                    if keep, do: {acc ++ [left ++ [right]], true}, else: {acc, m}
                  end)

                if Map.get(j, :left) && !m do
                  acc2 ++ [left ++ [nil]]
                else
                  acc2
                end
              end)
          end

        joined
      end)

    items = if where, do: Enum.filter(items, fn r -> where.(r) end), else: items

    items =
      if Map.has_key?(opts, :sortKey),
        do: Enum.sort_by(items, fn r -> apply(opts[:sortKey], r) end),
        else: items

    items =
      if Map.has_key?(opts, :skip),
        do:
          (
            n = opts[:skip]
            if n < length(items), do: Enum.drop(items, n), else: []
          ),
        else: items

    items =
      if Map.has_key?(opts, :take),
        do:
          (
            n = opts[:take]
            if n < length(items), do: Enum.take(items, n), else: items
          ),
        else: items

    Enum.map(items, fn r -> apply(opts[:select], r) end)
  end

  defp _sum(v) do
    list =
      cond do
        is_map(v) and Map.has_key?(v, :items) -> Map.get(v, :items)
        is_list(v) -> v
        true -> raise "sum() expects list or group"
      end

    Enum.sum(list)
  end
end

Main.main()
